--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -4,6 +4,9 @@
   "features": {
     "ghcr.io/devcontainers/features/common-utils:2": {
       "installScript": "npm install -g --loglevel=error ajv-cli@^5 ajv-formats"
+    },
+    "ghcr.io/CargoSense/devcontainer-features/shellcheck:1": {
+      "version": "latest"
     }
   },
   "postCreateCommand": "",
